# synthedit-module-example

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-module.yml
Gain/: CMakeLists.txt  Gain.cpp
assets/: license.txt
installer/macos/: build-pkg.sh
installer/windows/: gain.iss
